# omniserve

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  cog.yaml  predict.py  pyproject.toml
.github/workflows/: ci.yml
docker/: requirements.txt
omniserve/: __init__.py  catalog.py  cli.py  gpu.py  loras.py  priority.py  scheduler.py  server.py  weights.py
omniserve/backends/: __init__.py  base.py  diffusion.py  ltx_video.py  proxy.py  vllm_llm.py
plan/: omni-scheduler.md
scripts/: bench_gate.py  eval_parity.py  test_image_local.sh  watch_deploy.py
systemd/: omniserve.service
tests/: test_catalog_weights.py  test_priority.py  test_proxy.py  test_scheduler.py  test_server.py  test_tier_eviction.py  test_vram_arbitration.py
